完成查询小费报表功能
