# http/public.go
@@ -41,6 +41,7 @@ func (h *PublicApiHandler) SetRouter(r *gin.Engine) {
 	r.POST("/v1/get_member_trade_report", h.GetMemberTradeReport)
 	r.POST("/v1/enable_or_disable_mem", h.EnableOrDisableMem)
 	r.POST("/v1/get_date_time_report", h.GetDateTimeReport)
+	r.POST("/v1/get_tip_report", h.GetTipReport)
 }
 
 func (h *PublicApiHandler) handlePublicApi(c *gin.Context) {
@@ -96,6 +97,8 @@ func (h *PublicApiHandler) handlePublicApi(c *gin.Context) {
 		h.EnableOrDisableMem(c)
 	case "GetDateTimeReport":
 		h.GetDateTimeReport(c)
+	case "GetTipReport":
+		h.GetTipReport(c)
 	// Add other command handlers as needed
 	default:
 		if !passCommands[cmd] {
@@ -713,6 +716,74 @@ func (h *PublicApiHandler) GetDateTimeReport(c *gin.Context) {
 
 	xlog.Debugf("GetDateTimeReport req: %+v", &req)
 	resp, err := h.srv.GetDateTimeReport(c, &req)
+	if err != nil {
+		commonresp.ErrResp(c, err)
+		return
+	}
+	commonresp.JsonResp(c, resp)
+}
+
+// swagger:route POST /v1/get_tip_report api渠道接口 GetTipReport
+// 获取小费报表
+// consumes:
+//   - multipart/form-data
+//
+// responses:
+//
+//	200: GetTipReportResp
+//	500: CommonError
+func (h *PublicApiHandler) GetTipReport(c *gin.Context) {
+	var req view.GetTipReportReq
+	req.VendorID = c.PostForm("vendorId")
+	req.Signature = c.PostForm("signature")
+	req.User = c.PostForm("user")
+	startTimeStr := c.PostForm("startTime")
+	if startTimeStr != "" {
+		startTime, err := utils.Strtotime(startTimeStr)
+		if err != nil {
+			err := errors.New("startTime format error")
+			xlog.Errorf("startTime format error, err:%+v", err)
+			commonresp.ErrResp(c, err)
+			return
+		}
+		req.StartTime = startTime
+	} else {
+		req.StartTime = 0
+	}
+	endTimeStr := c.PostForm("endTime")
+	if endTimeStr != "" {
+		endTime, err := utils.Strtotime(endTimeStr)
+		if err != nil {
+			err := errors.New("endTime format error")
+			xlog.Errorf("endTime format error, err:%+v", err)
+			commonresp.ErrResp(c, err)
+			return
+		}
+		req.EndTime = endTime
+	} else {
+		req.EndTime = 0
+	}
+	timestamp, err := strconv.ParseInt(c.PostForm("timestamp"), 10, 64)
+	if err != nil {
+		xlog.Warnf("timestamp is not a number, use default value 0")
+		// 方便测试自动时间戳
+		timestamp = time.Now().Unix()
+	}
+	req.Timestamp = timestamp
+
+	syslang, err := strconv.Atoi(c.PostForm("syslang"))
+	if err != nil {
+		xlog.Warnf("syslang is not a number, use default value 0")
+		syslang = 0
+	}
+	if tmpLang, ok := gameUtil.LanguageMap[syslang]; ok {
+		req.Syslang = tmpLang
+	} else {
+		req.Syslang = "cn"
+	}
+
+	xlog.Debugf("GetTipReport req: %+v", &req)
+	resp, err := h.srv.GetTipReport(c, &req)
 	if err != nil {
 		commonresp.ErrResp(c, err)
 		return
